--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <div class="calc__content">
         <div class="calc__input">
           <label for="height">Height(cm)</label>
-          <input type="number" id="height">
+          <input type="number" min="0" inputmode="numeric" pattern="[0-9]*" id="height">
         </div>
         <div class="calc__input">
           <label for="weight">Weight(kg)</label>
-          <input type="number" id="weight">
+          <input type="number" min="0" inputmode="numeric" pattern="[0-9]*" id="weight">
         </div>
         <button class="calc__btn" id="calculate">Calculate BMI</button>
       </div>
