--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
   <div class="canvas-wrap">
     <canvas id="liquid"></canvas>
   </div>
-  <div class="calc">
-    <h1>BMI Calculator</h1>
-      <div class="calc__content">
-        <div class="calc__input">
-          <label for="height">Height(cm)</label>
-          <input type="number" min="0" inputmode="numeric" pattern="[0-9]*" id="height">
+  <div class="main">
+    <div class="calc">
+      <h1>BMI Calculator</h1>
+        <div class="calc__content">
+          <div class="calc__input">
+            <label for="height">Height(cm)</label>
+            <input type="number" min="0" inputmode="numeric" pattern="[0-9]*" id="height">
+          </div>
+          <div class="calc__input">
+            <label for="weight">Weight(kg)</label>
+            <input type="number" min="0" inputmode="numeric" pattern="[0-9]*" id="weight">
+          </div>
+          <button class="calc__btn" id="calculate">Calculate BMI</button>
         </div>
-        <div class="calc__input">
-          <label for="weight">Weight(kg)</label>
-          <input type="number" min="0" inputmode="numeric" pattern="[0-9]*" id="weight">
+        <div class="calc__res">
+          <p>Your BMI is</p>
+          <div id="result">00.00</div>
+          <p class="comment"></p>
         </div>
-        <button class="calc__btn" id="calculate">Calculate BMI</button>
-      </div>
-      <div class="calc__res">
-        <p>Your BMI is</p>
-        <div id="result">00.00</div>
-        <p class="comment"></p>
-      </div>
+    </div>
   </div>
   <script src="./js/main.js"></script>
 </body>
