--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="calc__res">
           <p>Your BMI is</p>
-          <div id="result">00.00</div>
+          <div class="result">00.00</div>
           <p class="comment"></p>
         </div>
     </div>
